[package]
name = "media_wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
lazy_static = "1.4.0"
tokio = { version = "1.9.0", features = ["full"] }
quote = "1.0.9"